<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BSU Maps</string>
    <string name="title_activity_maps">BSU Maps</string>
    <string name="placeNewPinButtonText">Place New Pin</string>
    <string name="title_activity_add_pin">AddPinActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addPinActivityTitle">Add Pin</string>
    <string name="addPinTitle">Name:</string>
    <string name="addPinDescription">Description:</string>
    <string name="takePictureButton">Take Picture</string>
    <string name="savePinButton">Save Pin</string>
    <string name="imageTitle">image</string>

</resources>
